--- a/index.html
+++ b/index.html
@@ -4,36 +4,37 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Sabrin Mohamud Resume</title>
-</head>
-<body>
+  <link rel="stylesheet" href="new.css"/>
+ </head>
+ <body>
   <div>
-  <h1>Sabrin Mohamud</h1>
+   <h1>Sabrin Mohamud</h1>
     <p> Self motivated individual who is eager to learn, and to develop a lifelong skills.
-  </div>
+   </div>
   
-  <div class="exp-header">
+   <div class="exp-header">
     <h3> experience</h3>
-  </div>
-  <div>
+   </div>
+   <div>
     <h4>M Health Fairview Southdale </h4>
     <h5>Health Unit Coordinator</h5>
     <h6>March 2020 | Casual </h6>
-    <ul>
-    <li>Communicated with patients and medical staff 
+     <ul>
+     <li>Communicated with patients and medical staff 
      to convey important information and 
       facilitate smooth unit operations.</li>
       <li> Prepared detailed reports and unit documentation 
         and distributed completed files.</li>
-      <li> Resolved interpersonal conflicts by listening, 
+       <li> Resolved interpersonal conflicts by listening, 
         finding common ground and building relationships.</li>
-    </ul>
+      </ul>
       </div>
   
-    <div> 
-      <h4>Sphora</h4>
-      <h5> BEAUTY ADVISOR</h5>
-      <h6> June 2019 - October 2020</h6>
-      <ul>
+       <div> 
+       <h4>Sphora</h4>
+       <h5> BEAUTY ADVISOR</h5>
+       <h6> June 2019 - October 2020</h6>
+       <ul>
         <li>Built and deepened productive and positive 
           customer relationships with high-quality service 
           and focus on gaining loyalty.</li>
@@ -41,15 +42,15 @@
           scheduling appointments and processing payments.</li>
         <li> Stayed up to date on current and emerging trends to 
           increase professional value and meet diverse client needs.</li>
-      </ul>
-    </div>
+       </ul>
+       </div>
     
-    <div class="exp-header">
-    <h3>Education</h3>
-  </div>
+     <div class="exp-header">
+     <h3>Education</h3>
+     </div>
     
-  <div>
+    <div>
     <h5> Bachelor of Science - Technical Communication</h5>
     <h6>Metropolitan State University, St. Paul
-December 2020</h6>
-     </div>
+     December 2020</h6>
+    </div>
