--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
  <body>
   <div>
    <h1>Sabrin Mohamud</h1>
+    
+    <h2> phone: 612-876-2432</h2>
+    <h3> Email: sabrinmohamud3@gmail.com </h3>
+    
     <p> Self motivated individual who is eager to learn, and to develop a lifelong skills.
    </div>
   
