--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h2> phone: 612-876-2432</h2>
     <h3> Email: sabrinmohamud3@gmail.com </h3>
     
-    <p> Self motivated individual who is eager to learn, and to develop a lifelong skills.
+    <p> Observant and innovative promblem-solver. Eager to learn, and to develop a lifelong skills.
    </div>
   
    <div class="exp-header">
